Added Tk macros and versioning info

--- a/tip/477.md
+++ b/tip/477.md
@@ -25,26 +25,28 @@
     * <a href='#toc-16'>The `rules.vc` file</a>
     * <a href='#toc-17'>The `targets.vc` file</a>
     * <a href='#toc-18'>Distributing the nmake build system</a>
-* <a href='#toc-19'>Locating Tcl and Tk</a>
-* <a href='#toc-20'>Customizing and extending the build environment</a>
-    * <a href='#toc-21'>Location of extension sources and implicit rules</a>
-    * <a href='#toc-22'>Output directories and file names</a>
-    * <a href='#toc-23'>Implicit rules</a>
-    * <a href='#toc-24'>Compiler and link flags</a>
-    * <a href='#toc-25'>Windows resource files</a>
-    * <a href='#toc-26'>Generating pkgIndex.tcl</a>
-    * <a href='#toc-27'>Targets</a>
-        * <a href='#toc-28'>Predefined targets</a>
+* <a href='#toc-19'>Locating Tcl</a>
+* <a href='#toc-20'>Locating Tk</a>
+* <a href='#toc-21'>Customizing and extending the build environment</a>
+    * <a href='#toc-22'>Location of extension sources and implicit rules</a>
+    * <a href='#toc-23'>Output directories and file names</a>
+    * <a href='#toc-24'>Implicit rules</a>
+    * <a href='#toc-25'>Compiler and link flags</a>
+    * <a href='#toc-26'>Windows resource files</a>
+    * <a href='#toc-27'>Generating pkgIndex.tcl</a>
+    * <a href='#toc-28'>Targets</a>
         * <a href='#toc-29'>The default target</a>
-        * <a href='#toc-30'>Standard targets</a>
-        * <a href='#toc-31'>Extending targets</a>
-        * <a href='#toc-32'>Ignoring standard targets</a>
-    * <a href='#toc-33'>Stubs</a>
-    * <a href='#toc-34'>Versioning</a>
-    * <a href='#toc-35'>Installation</a>
-    * <a href='#toc-36'>Sanity checking build configuration</a>
-* <a href='#toc-37'>Reference Implementation</a>
-* <a href='#toc-38'>Copyright</a>
+        * <a href='#toc-30'>Predefined targets</a>
+        * <a href='#toc-31'>Standard targets</a>
+        * <a href='#toc-32'>Extending targets</a>
+        * <a href='#toc-33'>Ignoring standard targets</a>
+    * <a href='#toc-34'>Stubs</a>
+    * <a href='#toc-35'>Versioning</a>
+    * <a href='#toc-36'>Installation</a>
+    * <a href='#toc-37'>Utility macros</a>
+    * <a href='#toc-38'>Sanity checking build configuration</a>
+* <a href='#toc-39'>Reference Implementation</a>
+* <a href='#toc-40'>Copyright</a>
 
 <!-- TOC END -->
 
@@ -145,6 +147,11 @@ ensure consistency across build configurations*.
 It is not the intent of this TIP to look at alternatives to
 nmake. There is already the TEA based system for those who prefer to
 use it.
+
+The nmake build system is not intended to be "compatible" with the TEA
+based system. For example, the generated libraries may not link with
+those generated from the other system. Of course, the built extensions
+should run with Tcl compiled from any compiler if stubs are enabled.
 
 Certain limitations in the current nmake system, in particular
 the requirement that there be no spaces in the source directories path
@@ -377,7 +384,7 @@ every time Tcl's version of these files change.* This also allows the
 extension to be built against older versions of Tcl that do not
 include these files in their installation.
 
-# <a id='toc-19'></a>Locating Tcl and Tk
+# <a id='toc-19'></a>Locating Tcl
 
 Building an extension requires Tcl, and optionally Tk, header files
 and libraries. The nmake build system locates directories in the
@@ -411,13 +418,67 @@ The macros `_INSTALLDIR` and `_TCLDIR` are generated from `INSTALLDIR`
 and `TCLDIR` respectively and contain the native form of the path
 (using backslashes as directory separators).
 
-In the case of extensions, the macro `TCLINSTALL` is set to `1` if the
-extension is being built against an installed Tcl and `0` if it is
-built against Tcl sources. For Tk extensions, the macro `TKINSTALL` is
-set similarly depending on whether the extension is being built
-against an installed Tk or against Tk sources.
+In addition, the following macros are defined for use by the extension
+makefile if desired.
 
-# <a id='toc-20'></a>Customizing and extending the build environment
+>
+Macro|Description
+-----|-----------
+`TCLINSTALL`|In the case of extensions, the macro `TCLINSTALL` is set to `1` if the extension is being built against an installed Tcl and `0` if it is built against Tcl sources.
+`TCL_MAJOR_VERSION`|The major version of the Tcl against which an extension is being built.
+`TCL_MINOR_VERSION`|The minor version of the Tcl against which an extension is being built.
+`TCL_PATCH_LEVEL`|The patch level of the Tcl against which an extension is being built.
+`TCL_DOTVERSION`|`$(TCL_MAJOR_VERSION).$(TCL_MINOR_VERSION)`
+`TCL_VERSION`|`$(TCL_MAJOR_VERSION)$(TCL_MINOR_VERSION)`
+`_TCL_H`|The path to the `tcl.h` header file.
+
+# <a id='toc-20'></a>Locating Tk
+
+A similar method as above is used for extensions that build against Tk.
+The nmake build system locates directories in the
+following order:
+
+The installation directory is specified via the `INSTALLDIR` macro on
+the command line. If unspecified, this defaults to `C:\Tcl`.
+**NOTE**: this is a change from the current default of
+`C:\Program Files\Tcl` because the latter may not have access
+permissions for the user.
+
+The location of the Tk header files and libraries is specified
+with the `TKDIR` macro.
+
+* If the macro is defined on the command line, it is used as
+  the location of the Tk root directory. This is generally the
+  directory containing an installed Tk but could also point to the
+  root of a Tk source tree if the extension requires Tk internal
+  headers (not recommended).
+
+* If `TKDIR` is not defined, the macro `INSTALLDIR` is treated as the
+  Tk root directory **if** the directory exists and contains the expected
+  header files.
+
+* As a last resort, the directory `$(_TCLDIR)` is checked and if
+  containing the expected header files, used as the value of `TKDIR`.
+
+* If the header files still cannot be located, an error is generated.
+
+The macro `_TKDIR` contains the native form of `$(TKDIR)`.
+
+In addition, the following macros are defined for use by the extension
+makefile if desired.
+
+>
+Macro|Description
+-----|-----------
+`TKINSTALL`|In the case of extensions, the macro `TKINSTALL` is set to `1` if the extension is being built against an installed Tk and `0` if it is built against Tk sources.
+`TK_MAJOR_VERSION`|The major version of the Tk against which an extension is being built.
+`TK_MINOR_VERSION`|The minor version of the Tk against which an extension is being built.
+`TK_PATCH_LEVEL`|The patch level of the Tk against which an extension is being built.
+`TK_DOTVERSION`|`$(TK_MAJOR_VERSION).$(TK_MINOR_VERSION)`
+`TK_VERSION`|`$(TK_MAJOR_VERSION)$(TK_MINOR_VERSION)`
+`_TK_H`|The path to the `tk.h` header file.
+
+# <a id='toc-21'></a>Customizing and extending the build environment
 
 It is hoped that the basic makefile structure described earlier will
 suffice for the majority of extensions which follow standard conventions
@@ -446,10 +507,14 @@ These all require different levels of customization and extension and
 the nmake system tries to accomodate these with minimal effort as
 described in the following sections.
 
-## <a id='toc-21'></a>Location of extension sources and implicit rules
+## <a id='toc-22'></a>Location of extension sources and implicit rules
+
+The macro `ROOT` is set by the `rules.vc` to point to the root of the
+extension source tree. **This must be exactly one level above the
+directory containing the extension makefile.**
 
 The basic makefile shown earlier assumes the following directory
-structure for the extension sources:
+structure for the extension sources under `$(ROOT)`:
 
 >
 Subdirectory|Macro|Description
@@ -486,7 +551,7 @@ additional sources, you would add the lines below after including
 
 >
     EXTRADIR = $(ROOT)\extrasrc
-
+	...
     {$(EXTRADIR)}.c{$(TMP_DIR)}.obj::
 	        $(cc32) $(pkgcflags) -Fo$(TMP_DIR)\ @<<
     $<
@@ -498,33 +563,68 @@ Here `cc32` and `pkgcflags` are standard macros defined within
 The `DOCDIR`, `DEMODIR` and `TOOLSDIR` macros are only defined
 as conveniences for the parent makefile.
 
-## <a id='toc-22'></a>Output directories and file names
+## <a id='toc-23'></a>Output directories and file names
 
 Based on the options specified on the command line, compiler version
-and target architecture, the following macros are defined:
+and target architecture, the following macros are defined for
+the output directories:
 
+>
 Macro|Description
 -----|-----------
 `OUT_DIR`|Directory to place output executables and libraries
 `TMP_DIR`|Directory to place all the object files
 
 The output directory path placed in `OUT_DIR` has the form
-`Release_COMPILERVERSION` for x86 builds and
-`Release_AMD64_COMPILERVERSION` for x64 builds (the discrepancy
-in inclusion of architecture is historical).
+`Release_COMPILERVERSION` for x86 release builds and
+`Release_AMD64_COMPILERVERSION` for x64 release builds (the discrepancy
+in inclusion of architecture is historical). For debug builds 
+(when `symbols` is included in `OPTS` on the command line), `Release_`
+is replaced by `Debug_`.
 
 The object files directory path placed in `TMP_DIR` has the form
+`$(PROJECT)_ThreadedDynamic` or `$(PROJECT)_ThreadedStatic` depending
+on whether the build options specify dynamic or static linking.
 
+In addition, `rules.vc` defines the macros shown below for the output
+files themselves. These are only generally needed by the extension
+makefile if it is defining custom targets and rules instead of using
+the default built-in ones.
 
-## <a id='toc-23'></a>Implicit rules
+>
+Macro|Description|Example
+-----|-----------|-------
+`PRJLIBNAME`|File name of the generated binary extension|`sample12t.dll`
+`PRJLIB`|Path to the generated binary extension|`.\Release\sample12t.dll`
+`PRJIMPLIB`|Path to the link library for the generated extension|`.\Release\sample12t.lib`
+`PRJSTUBLIBNAME`|File name of the stub library for the extension|`samplestub12.dll`
+`PRJSTUBLIB`|Path to the stub library|`.\Release\samplestub12.dll`
+
+The generated file names follow a convention based on the project name 
+(`sample`), the version (`1.2`) and a suffix composed of one or more of 
+the letters shown below.
+
+>
+Suffix|Meaning
+------|-------
+`t`|Threaded build. Always set as Tcl requires a threaded build on Windows.
+`s`|Static build. Not present for dynamic builds.
+`g`|Debug build with symbols.
+`x`|Static build but linking to dynamic C runtime.
+
+For most extension makefiles, these file names are not very relevant.
+However, they are needed when the default rules are not adequate,
+and the extension makefile needs to define its own.
+
+## <a id='toc-24'></a>Implicit rules
 
 TBD
 
-## <a id='toc-24'></a>Compiler and link flags
+## <a id='toc-25'></a>Compiler and link flags
 
 TBD
 
-## <a id='toc-25'></a>Windows resource files
+## <a id='toc-26'></a>Windows resource files
 
 Windows programs and DLL's are expected to have a version resource 
 embedded in them though this is not mandatory. To free the extension
@@ -567,7 +667,7 @@ Note the use of `TMP_DIR` and `RCDIR` in the dependency. The
 `MAKERESCMD` macro defines the command and associated standard flags to 
 compile a resource definition file.
 
-## <a id='toc-26'></a>Generating pkgIndex.tcl
+## <a id='toc-27'></a>Generating pkgIndex.tcl
 
 The standard default `install` target expects a `pkgIndex.tcl` file to have
 been generated and placed in the `$(OUT_DIR)` output directory. It
@@ -601,9 +701,21 @@ For all other cases, the extension author needs to write their own
 target commands for `pkgindex` that results in a `pkgIndex.tcl` file
 being placed in the `$(OUT_DIR)` directory.
 
-## <a id='toc-27'></a>Targets
+## <a id='toc-28'></a>Targets
 
-### <a id='toc-28'></a>Predefined targets
+### <a id='toc-29'></a>The default target
+
+If unspecified on the command line, the default target is assumed to be 
+`$(PROJECT)`. To change this, define the macro `DEFAULT_BUILD_TARGET`
+before including `rules-ext.vc`. For example,
+
+>
+    DEFAULT_BUILD_TARGET = release
+	
+Note you have to define the target yourself unless it is predefined or 
+standard.
+
+### <a id='toc-30'></a>Predefined targets
 
 Since most extensions build commands in a similar fashion, the
 `rules.vc` file provides some predefined targets that encapsulate the
@@ -622,20 +734,11 @@ Target|Description
 `default-distclean`|Maps to `default-hose` plus cleans up `nmakehlp` helpers.
 `default-setup`|Does common build initialization like creation of output directories.
 
+These pre-defined targets are used as building blocks by the standard
+targets described in the next section as well as potentially by
+additional custom targets defined by a makefile.
 
-### <a id='toc-29'></a>The default target
-
-If unspecified on the command line, the default target is assumed to be 
-`$(PROJECT)`. To change this, define the macro `DEFAULT_BUILD_TARGET`
-before including `rules-ext.vc`. For example,
-
->
-    DEFAULT_BUILD_TARGET = release
-	
-Note you have to define the target yourself unless it is predefined or 
-standard.
-
-### <a id='toc-30'></a>Standard targets
+### <a id='toc-31'></a>Standard targets
 
 Inclusion of the file `targets.vc` defines "standard" targets commonly
 defined in makefiles and shown in the table below. These generally
@@ -645,6 +748,7 @@ discussed in the next section.
 >
 Target|Description
 ------|-----------
+`$(PROJECT)`|The name of the project builds the binary extension.
 `install`|Maps to `default-install`.
 `clean`|Maps to `default-clean`.
 `hose`|Maps to `default-hose`.
@@ -652,7 +756,7 @@ Target|Description
 `distclean`|Maps to `default-distclean`.
 
 
-### <a id='toc-31'></a>Extending targets
+### <a id='toc-32'></a>Extending targets
 
 In some cases, the standard targets "almost" suffice but are missing
 some additional actions. In such cases, instead of not including the
@@ -671,7 +775,7 @@ target can be extended with additional commands:
 Note `CPY`, `DOCDIR` and `DOC_INSTALL_DIR` are all predefined or
 computed macros within rules.vc.
 
-### <a id='toc-32'></a>Ignoring standard targets
+### <a id='toc-33'></a>Ignoring standard targets
 
 In the extreme case, the standard targets can be completely ignored
 by the extension makefile by not including `targets.vc`. Note the
@@ -693,35 +797,61 @@ As an aside, when defining your own commands for building targets, you
 are strongly encouraged to make use of the predefined compiler 
 and linker flags such as `$(pkgcflags)` etc. described elsewhere.
 
-## <a id='toc-33'></a>Stubs
+## <a id='toc-34'></a>Stubs
 
 TBD - using stubs
 
 TBD - generating stubs
 
-## <a id='toc-34'></a>Versioning
+## <a id='toc-35'></a>Versioning
 
-TBD - defaults to TEA
+By default, the nmake build determines the version of the extension by 
+looking for a TEA `configure.in` or `configure.ac` file in extension's 
+source root directory `$(ROOT)`. The extension's version is extracted
+from the `AC_INIT` macro in that file. This allows the version to be
+maintained in a single place for the two build environments.
 
-TBD - DOTVERSION, VERSION
+If the version cannot be determined as above or if the extension needs
+to have a different version on Windows for whatever reason, the
+macro `DOTVERSION` must be defined **before** including `rules-ext.vc`
+in the extension's makefile. This must be the major and minor version
+of the extension in dotted form. For example,
 
-## <a id='toc-35'></a>Installation
+>
+    ...
+	DOTVERSION = 1.2
+	!include "rules-ext.vc"
+    ...
+	
+After including `rules-ext.vc` the `DOTVERSION` and `VERSION` macros
+are guaranteed to be defined. The latter is the `DOTVERSION` value
+with all periods removed.
+
+TBD - Tcl and Tk version macros
+
+## <a id='toc-36'></a>Installation
 
 Installation macros (SCRIPT_INSTALL_DIR etc.)
 
-## <a id='toc-36'></a>Sanity checking build configuration
+## <a id='toc-37'></a>Utility macros
+
+TBD
+
+## <a id='toc-38'></a>Sanity checking build configuration
 
 TBD 
 
-# <a id='toc-37'></a>Reference Implementation
+# <a id='toc-39'></a>Reference Implementation
 
 The vc-reform branch in the core.tcl.tk repositories contains work-in-progress.
 
 
 
-# <a id='toc-38'></a>Copyright
+# <a id='toc-40'></a>Copyright
 
 This document has been placed in the public domain.
+
+
 
 
 
