Use a format that renders significant newlines right.

--- a/tip/478.md
+++ b/tip/478.md
@@ -25,7 +25,7 @@ Additionally, it is proposed to add an initialise class definition command to al
 # Reference Implementation
 
 Reference implementations are mentioned in the proposal section. Additionally, this is a reference implementation for initialise:
-<code>
+<pre>
   proc ::oo::define::initialise {body} {
       if {[package vsatisfies [package require Tcl] 8.7]} {
           set cls [uplevel 1 self]
@@ -34,7 +34,7 @@ Reference implementations are mentioned in the proposal section. Additionally, t
       }
       tailcall apply [list {} $body [info object namespace $cls]]
   }
-</code>
+</pre>
 
 # Copyright
 
