Minor TIP #476 update. Fix two executable flags (which shouldn't be there) and update TIP index.

--- a/tip/476.md
+++ b/tip/476.md
@@ -36,11 +36,18 @@ This TIP proposes serveral things:
        on platforms where long has the same size as long long.
 
    *   Document the already existing TCL\_LL\_MODIFIER macro to be equivalent
-       to "ll" whenever possible. This can be used to format/scan variables
-       of type Tcl\_WideInt/Tcl\_WideUInt.
+       to "ll" whenever possible. This is used already to format/scan variables
+       of type Tcl\_WideInt/Tcl\_WideUInt, but now it can be used also for
+       variables of type long long or \_\_int64 (Windows). The obligation to
+       use Tcl\_WideInt/Tcl\_WideUInt in extensions (enforced by compiler
+       warnings) is now gone: Most compilers understand "long long" now.
 
    *   Add a new TCL\_Z\_MODIFIER macro to be equivalent to "z" whenever possible.
-       This can be used to format/scan variables of type size_t.
+       This can be used to format/scan variables of type size\_t or ptrdiff\_t.
+       If your compiler is ISO C99-compatible, you can use "z" resp "t" instead.
+
+   *   No longer let the "%llu" format generate an error if the formatted number
+       is positive.
 
    *   Adapt the %#o modifier (TODO: explain)
 
