No need to specify http in link (could be https as well)

--- a/tip/476.md
+++ b/tip/476.md
@@ -26,7 +26,7 @@ is needed for correct interpretation of the number when parsing it.
 # Rationale
 
 For an example program containing all situations mentioned here,
-see [main.c](http:../attach/476/main.c)
+see [main.c](../attach/476/main.c)
 
 First of all, when compiling the example program on 64-bit linux
 (with -DTCL\_WIDE\_INT\_IS\_LONG=1), gcc outputs 5 warnings, 4 of them
